PCS BAckup 26Dec2023/Backup-Source/objects/Vision_GCP_Customer_Order_Trend__c.object
<CustomObject>
    <fields>
        <fullName>GCP_Customer_Code__c</fullName>
        <label>GCP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Update_Date__c</fullName>
        <description>This field is when GCP is pulling their data</description>
        <label>Data Lake Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Status__c</fullName>
        <inlineHelpText>Represents the current status of the Order.</inlineHelpText>
        <label>Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Received</fullName>
                </value>
                <value>
                    <fullName>Delivery Created</fullName>
                </value>
                <value>
                    <fullName>Order Shipped</fullName>
                </value>
                <value>
                    <fullName>Order Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_PO__c</fullName>
        <label>Customer PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP Customer Order Trends</relationshipLabel>
        <relationshipName>GCP_Customer_Order_Trends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Delivery_Number__c</fullName>
        <label>Delivery Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Delivery_Qty__c</fullName>
        <label>Delivery Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Customer_Name__c</fullName>
        <label>GCP Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_NDC_Code__c</fullName>
        <label>NDC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Open_Order_Qty__c</fullName>
        <label>Open Order Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Month__c</fullName>
        <label>Order Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Qty__c</fullName>
        <label>Order Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Status__c</fullName>
        <label>Order Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Week__c</fullName>
        <label>Order Week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_PO_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <inlineHelpText>This field contains reporting_molecule data</inlineHelpText>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Rejection_Reason_Description__c</fullName>
        <label>Rejection Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Code__c</fullName>
        <label>SKU  Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Desc__c</fullName>
        <inlineHelpText>This field contains product name</inlineHelpText>
        <label>SKU Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Salesforce_Id__c</fullName>
        <label>Salesforce Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Ship_Location_City__c</fullName>
        <label>Ship Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Ship_Location_State__c</fullName>
        <label>Ship Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Ship_Qty__c</fullName>
        <label>Ship Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Ship_to_Customer__c</fullName>
        <label>Ship to Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Status_Update_Field__c</fullName>
        <label>Status Update Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Top_Five_Indicator__c</fullName>
        <label>Top Five Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Update_Date__c</fullName>
        <label>Vision Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_isOTIF__c</fullName>
        <formula>IF( Vision_Requested_Delivery_Date__c &gt;=  Vision_Delivery_Date__c , IF(Vision_Ship_Qty__c &gt;=  Vision_Order_Qty__c , true, false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is OTIF</label>
        <type>Checkbox</type>
    </fields>
    <label>GCP Customer Order Trend</label>
    <nameField>
        <displayFormat>GCP cus-ord-trend-{0000000}</displayFormat>
        <label>GCP Customer Order Trend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Customer Order Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>